[CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
[CHANGE] The way prop protection works for admins
[CHANGE] Moved the job change to F2 and I added a lot of commands/entities to it
[CHANGE] The way Simple prop protection protects against slider bug: you can make the slider but you won't be able to do anything with the prop you made the slider on.
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
[FIX] Exploit with wire nailer
[FIX] Exploit that you can duplicate weapons(I made sure that you can't use toolgun on weapons AND I made sure you can't spawn saved weapons works on both normal dup and adv. dup)
[FIX] Bug that even if hungermod was off, food would still cost money.
[REMOVE] Data/DarkRP/WHAT_YOU_CAN_DO_IN_THIS_FOLDER.txt and its contents, it had absolutely no purpose. If you have that file, the update won't remove it but it won't remake it either.


VERSION 2.3.1
Updated by: FPtje Falco

[ADD by FPtje] Awesome change job screen, Press F4 while not looking at a door
[ADD by FPtje] Player possessor swep for the admins
[ADD by FPtje] Sleep sound
[ADD by FPtje] New team! Hobo
[ADD by FPtje] Cops can warrant through TAB scoreboard :D
[ADD by FPtje] The battering ram can unfreeze props of warranted players!
[FIX by FPtje] People being able to duplicate DarkRP entities/Remove other people's entities through a slider/winch/muscle/etc.
[FIX by FPtje] Having to respawn when you change your job, Now you can change your job without respawning
[FIX by FPtje] When you go to sleep and back you now get all your weapons back
[FIX by FPtje] Medic's can't "heal" when someone's health is or is bigger than 100